# project_cpp_checkers

./: .clang-format  .gitignore  CMakeLists.txt
include/: checkers.hpp
src/: checkers.cpp  main.cpp
tests/: test_main.cpp
